[gd_scene load_steps=17 format=3 uid="uid://cbx8hv5bdo6hp"]

[ext_resource type="Script" path="res://scripts/gameplay_scene.gd" id="1_rdt4s"]
[ext_resource type="PackedScene" uid="uid://c8wwihjlky3de" path="res://prefabs/entities/player.tscn" id="2_smcvs"]
[ext_resource type="Script" path="res://scripts/level_elements/camera.gd" id="2_w1nua"]
[ext_resource type="Texture2D" uid="uid://buoojl8a6dwpw" path="res://textures/portraits/fivepebbles.png" id="4_ea6mj"]
[ext_resource type="PackedScene" uid="uid://da3ddgwibmequ" path="res://prefabs/interface/interface_handler.tscn" id="5_ewune"]
[ext_resource type="PackedScene" uid="uid://c3jbyoyt5qsdw" path="res://prefabs/interface/button.tscn" id="6_1bo1v"]

[sub_resource type="Theme" id="Theme_jofsl"]
default_font_size = 28

[sub_resource type="Animation" id="Animation_kitq2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -141)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..:dialogue_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_by5hf"]
resource_name = "fade_in"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.35, 1),
"update": 0,
"values": [Vector2(0, -141), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..:dialogue_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_n8urj"]
resource_name = "fade_out"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.35, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -141)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..:dialogue_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fee2k"]
_data = {
"RESET": SubResource("Animation_kitq2"),
"fade_in": SubResource("Animation_by5hf"),
"fade_out": SubResource("Animation_n8urj")
}

[sub_resource type="LabelSettings" id="LabelSettings_gofkt"]
font_size = 26
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_x56kr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("square:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xofei"]
resource_name = "fade_in"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:transition_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.435275, 1),
"update": 0,
"values": [0.0, 1092.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("square:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qn3qd"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:transition_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(2.37841, 1),
"update": 0,
"values": [1092.0, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("anim")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["fade_in", -1, 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("square:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wnjrn"]
_data = {
"RESET": SubResource("Animation_x56kr"),
"fade_in": SubResource("Animation_xofei"),
"fade_out": SubResource("Animation_qn3qd")
}

[node name="gameplay_scene" type="Node2D"]
script = ExtResource("1_rdt4s")
starting_scene_path = "res://prefabs/rooms/005_plaza.tscn"
transition_scale = 541.108

[node name="player" parent="." instance=ExtResource("2_smcvs")]

[node name="camera" type="Camera2D" parent="."]
script = ExtResource("2_w1nua")
follow_path = NodePath("../player")

[node name="active_room" type="Node2D" parent="."]

[node name="user_interface" type="CanvasLayer" parent="."]

[node name="dialogue_box" type="Node2D" parent="user_interface"]
position = Vector2(0, -141)

[node name="bg" type="ColorRect" parent="user_interface/dialogue_box"]
offset_right = 1280.0
offset_bottom = 141.0
color = Color(0, 0, 0, 1)

[node name="npc_frame" type="ColorRect" parent="user_interface/dialogue_box"]
offset_left = 1147.0
offset_top = 11.0
offset_right = 1265.0
offset_bottom = 129.0
color = Color(0.188235, 0.207843, 0.243137, 1)

[node name="npc_portrait" type="Sprite2D" parent="user_interface/dialogue_box"]
position = Vector2(1206, 70)
texture = ExtResource("4_ea6mj")

[node name="display_text" type="RichTextLabel" parent="user_interface/dialogue_box"]
offset_left = 12.0
offset_top = 8.0
offset_right = 1136.0
offset_bottom = 141.0
theme = SubResource("Theme_jofsl")
text = "Gluttonous beast, what brings you to my chamber? You are like no other messenger before you. Perhaps I have underestimated the ability for your kind to communicate my existence?"
fit_content = true
scroll_active = false

[node name="anim" type="AnimationPlayer" parent="user_interface/dialogue_box"]
libraries = {
"": SubResource("AnimationLibrary_fee2k")
}

[node name="weapon" type="Node2D" parent="user_interface"]

[node name="sprite" type="Sprite2D" parent="user_interface/weapon"]
position = Vector2(40, 840)

[node name="amount_display" type="Label" parent="user_interface/weapon"]
offset_left = 57.0
offset_top = 837.0
offset_right = 102.0
offset_bottom = 873.0
label_settings = SubResource("LabelSettings_gofkt")

[node name="taxi_menu" type="Node2D" parent="user_interface"]

[node name="bg" type="ColorRect" parent="user_interface/taxi_menu"]
offset_left = 400.0
offset_top = 80.0
offset_right = 880.0
offset_bottom = 360.0
color = Color(0.623529, 0.686275, 0.811765, 1)

[node name="interface_handler" parent="user_interface/taxi_menu" instance=ExtResource("5_ewune")]

[node name="button" parent="user_interface/taxi_menu/interface_handler" instance=ExtResource("6_1bo1v")]
position = Vector2(640, 160)
size = Vector2(400, 80)
to_do_on_usage = "taxi_goal"
params = ["res://prefabs/rooms/006_city_greenhouse.tscn"]
text_to_put = "City greenhouse"

[node name="button2" parent="user_interface/taxi_menu/interface_handler" instance=ExtResource("6_1bo1v")]
position = Vector2(640, 280)
size = Vector2(400, 80)
to_do_on_usage = "taxi_goal"
params = ["res://prefabs/rooms/006_city_greenhouse.tscn"]
text_to_put = "Dingus"

[node name="screen_transition" type="Node2D" parent="user_interface"]
visible = false

[node name="square" type="Polygon2D" parent="user_interface/screen_transition"]
position = Vector2(640, 440)
color = Color(0, 0, 0, 1)
invert_enabled = true
invert_border = 800.0
polygon = PackedVector2Array(-1, 0, 1, 0, 0, 1, -1, 0)

[node name="anim" type="AnimationPlayer" parent="user_interface/screen_transition"]
libraries = {
"": SubResource("AnimationLibrary_wnjrn")
}
